--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
 @import url("./assets/styles/_setting.css");
 @import url("./assets/styles/_global.css");
 @import url("./assets/styles/_movie_card.css");
+@import url("./assets/styles/_notice.css");
+@import url("./assets/styles/_jauge.css");
 /* @import url("./assets/styles"); */
+body{
+    background: rgb(91, 79, 79);
+}
