--- a/assets/styles/_setting.css
+++ b/assets/styles/_setting.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;    
 }
+/* :root{
+    --likes: 0;
+    --dislikes: 0;
+} */
 img{
     width: 100%;
     height: 100%;
