--- a/assets/styles/_movie_card.css
+++ b/assets/styles/_movie_card.css
@@ -1,6 +1,6 @@
 .movies-content {
     gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: 350px;
 }
 
@@ -11,4 +11,8 @@
     background: red;
 }
 
-
+.movie-rm {
+    color: red;
+    padding: 2px 5px;
+    font-size: 16px;
+}
