--- a/assets/styles/_jauge.css
+++ b/assets/styles/_jauge.css
@@ -2,11 +2,11 @@
     /* border: solid black 0.5px; */
     height: 10px;
     width: 100%;
-    background: rgb(255, 125, 125);
+    background:  var(--third-color);
 }
 
 .jauge {
-    background: rgb(66, 32, 32);
+    background: var(--primary-color);
     width: calc((var(--likes)/(var(--likes) + var(--dislikes))) * 100%);
     height: 100%;
 }
