--- a/assets/styles/_movie_card.css
+++ b/assets/styles/_movie_card.css
@@ -1,18 +1,24 @@
 .movies-content {
     gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
     grid-auto-rows: 350px;
 }
 
 .movie {
-    grid-template-rows: 45% auto;
-    padding: 5px;
-
-    background: red;
+    grid-template-rows: 65% auto;
+    grid-auto-columns: 100%;
+    background: var(--second-color);
+    box-shadow: 1px 1px 10px 2px;
 }
 
 .movie-rm {
     color: red;
     padding: 2px 5px;
     font-size: 16px;
+}
+
+.movie-info {
+    /* background: #590202; */
+    width: 100%;
+    padding: 0 10px;
 }
