--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
 @import url("./assets/styles/_movie_card.css");
 @import url("./assets/styles/_notice.css");
 @import url("./assets/styles/_jauge.css");
+@import url("./assets/styles/_searchBar.css");
+@import url("./assets/styles/_pagination.css");
 /* @import url("./assets/styles"); */
 
 
