--- a/assets/styles/_pagination.css
+++ b/assets/styles/_pagination.css
@@ -6,6 +6,14 @@
 }
 
 .pagination button {
+    /* display: grid; */
+    align-items: center;
     width: 10em;
     padding: 10px;
+}
+
+.pagination span {
+    border-radius: 30px;
+    background: var(--primary-color);
+    color: white;
 }
